--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,34 @@
+# Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+
+# IDE
+.idea/
+*.iml
+.settings/
+.project
+.classpath
+
+# Compiled files
+*.class
+*.jar
+*.war
+
+# Logs
+*.log
+
+# OS specific
+.DS_Store
+Thumbs.db
+
+# Application specific
+todos.txt
+
 ### IntelliJ IDEA ###
 out/
 !**/src/main/**/out/
